--- a/app/src/main/res/drawable/rounded_edge_background.xml
+++ b/app/src/main/res/drawable/rounded_edge_background.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/transparent_dark" />
+            <solid android:color="#f0f0f0" />
             <corners android:radius="8dp" />
         </shape>
     </item>
