--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,7 @@
 
 
     <style name="text_label">
+        <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
         <item name="android:paddingBottom">10dp</item>
         <item name="android:paddingTop">10dp</item>
@@ -28,10 +29,10 @@
     </style>
 
     <style name="text_button" parent="text_label">
+        <item name="android:layout_margin">16dp</item>
         <item name="android:focusable">true</item>
         <item name="android:clickable">true</item>
         <item name="android:background">@drawable/rounded_edge_background</item>
     </style>
-
 
 </resources>
